--- a/requirements.txt
+++ b/requirements.txt
@@ -1,69 +1,81 @@
-annotated-types==0.6.0
-anyio==4.3.0
-appdirs==1.4.4
-asgiref==3.7.2
-build==1.1.1
+appnope==0.1.2
+argon2-cffi==20.1.0
+async-generator==1.10
+attrs==20.3.0
+backcall==0.2.0
+bleach==3.3.0
 certifi==2024.2.2
+cffi==1.14.5
 charset-normalizer==3.3.2
-click==8.1.7
-exceptiongroup==1.2.0
-fastapi==0.110.0
+contourpy==1.0.6
+cycler==0.11.0
+decorator==5.0.7
+defusedxml==0.7.1
+entrypoints==0.3
+filelock==3.13.1
+fonttools==4.38.0
 fsspec==2024.2.0
-h11==0.14.0
-htmltools==0.5.1
-httpcore==1.0.4
-httpx==0.27.0
-humanize==4.9.0
+huggingface-hub==0.20.3
 idna==3.6
-importlib-metadata==7.0.1
-importlib_resources==6.1.2
-Jinja2==3.1.3
-joblib==1.3.2
-linkify-it-py==2.0.3
-logging==0.4.9.6
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdit-py-plugins==0.4.0
-mdurl==0.1.2
-nest-asyncio==1.6.0
-numpy==1.24.4
-packaging==23.2
+ipykernel==5.5.3
+ipython==7.22.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+jedi==0.18.0
+Jinja2==2.11.3
+joblib==1.2.0
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.12
+jupyter-console==6.4.0
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+kiwisolver==1.4.4
+MarkupSafe==1.1.1
+matplotlib==3.6.2
+mistune==0.8.4
+nbclient==0.5.3
+nbconvert==6.0.7
+nbformat==5.1.3
+nest-asyncio==1.5.1
+notebook==6.3.0
+numpy==1.24.2
+packaging==20.9
 palmerpenguins==0.1.4
-pandas==2.0.3
-pins==0.8.4
-pip-tools==7.4.0
-plotly==5.19.0
-prompt-toolkit==3.0.36
-pydantic==2.6.3
-pydantic_core==2.16.3
-PyJWT==2.8.0
-pyproject_hooks==1.0.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-multipart==0.0.9
-pytz==2024.1
+pandas==1.5.3
+pandocfilters==1.4.3
+parso==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.3.0
+prometheus-client==0.10.1
+prompt-toolkit==3.0.18
+ptyprocess==0.7.0
+pycparser==2.20
+Pygments==2.8.1
+pyparsing==2.4.7
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+pytz==2022.7.1
 PyYAML==6.0.1
-questionary==2.0.1
+pyzmq==22.0.3
+qtconsole==5.0.3
+QtPy==1.9.0
 requests==2.31.0
-rsconnect_python==1.22.0
-scikit-learn==1.3.2
+scikit-learn==1.2.1
 scipy==1.10.1
-semver==2.13.0
-shiny==0.8.0
-six==1.16.0
-sniffio==1.3.1
-starlette==0.36.3
-tenacity==8.2.3
-threadpoolctl==3.3.0
-tomli==2.0.1
-typing_extensions==4.10.0
-tzdata==2024.1
-uc-micro-py==1.0.3
-urllib3==2.2.1
-uvicorn==0.27.1
-vetiver==0.2.4
-watchfiles==0.21.0
-wcwidth==0.2.13
-websockets==12.0
-xxhash==3.4.1
-zipp==3.17.0
+Send2Trash==1.5.0
+six==1.15.0
+terminado==0.9.4
+testpath==0.4.4
+threadpoolctl==3.1.0
+torch==1.13.0
+tornado==6.1
+tqdm==4.66.2
+traitlets==5.0.5
+typing_extensions==4.4.0
+urllib3==2.2.0
+wcwidth==0.2.5
+webencodings==0.5.1
+widgetsnbextension==3.5.1
