--- a/requirements.txt
+++ b/requirements.txt
@@ -1,81 +1,56 @@
-appnope==0.1.2
-argon2-cffi==20.1.0
-async-generator==1.10
-attrs==20.3.0
+appnope==0.1.4
+asttokens==2.4.1
+attrs==23.2.0
 backcall==0.2.0
-bleach==3.3.0
-certifi==2024.2.2
-cffi==1.14.5
-charset-normalizer==3.3.2
-contourpy==1.0.6
-cycler==0.11.0
-decorator==5.0.7
-defusedxml==0.7.1
-entrypoints==0.3
-filelock==3.13.1
-fonttools==4.38.0
-fsspec==2024.2.0
-huggingface-hub==0.20.3
-idna==3.6
-ipykernel==5.5.3
-ipython==7.22.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-jedi==0.18.0
-Jinja2==2.11.3
-joblib==1.2.0
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.12
-jupyter-console==6.4.0
-jupyter-core==4.7.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
-kiwisolver==1.4.4
-MarkupSafe==1.1.1
-matplotlib==3.6.2
-mistune==0.8.4
-nbclient==0.5.3
-nbconvert==6.0.7
-nbformat==5.1.3
-nest-asyncio==1.5.1
-notebook==6.3.0
-numpy==1.24.2
-packaging==20.9
+comm==0.2.1
+debugpy==1.8.1
+decorator==5.1.1
+duckdb==0.10.0
+executing==2.0.1
+fastjsonschema==2.19.1
+importlib_metadata==7.0.2
+importlib_resources==6.1.3
+ipykernel==6.29.3
+ipython==8.12.3
+jedi==0.19.1
+joblib==1.3.2
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.0
+jupyter_core==5.7.1
+matplotlib-inline==0.1.6
+nbclient==0.9.0
+nbformat==5.9.2
+nest-asyncio==1.6.0
+numpy==1.24.4
+packaging==23.2
 palmerpenguins==0.1.4
-pandas==1.5.3
-pandocfilters==1.4.3
-parso==0.8.2
-pexpect==4.8.0
+pandas==2.0.3
+parso==0.8.3
+pexpect==4.9.0
 pickleshare==0.7.5
-Pillow==9.3.0
-prometheus-client==0.10.1
-prompt-toolkit==3.0.18
+pkgutil_resolve_name==1.3.10
+platformdirs==4.2.0
+prompt-toolkit==3.0.43
+psutil==5.9.8
 ptyprocess==0.7.0
-pycparser==2.20
-Pygments==2.8.1
-pyparsing==2.4.7
-pyrsistent==0.17.3
-python-dateutil==2.8.1
-pytz==2022.7.1
+pure-eval==0.2.2
+Pygments==2.17.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
 PyYAML==6.0.1
-pyzmq==22.0.3
-qtconsole==5.0.3
-QtPy==1.9.0
-requests==2.31.0
-scikit-learn==1.2.1
+pyzmq==25.1.2
+quarto==0.1.0
+referencing==0.33.0
+rpds-py==0.18.0
+scikit-learn==1.3.2
 scipy==1.10.1
-Send2Trash==1.5.0
-six==1.15.0
-terminado==0.9.4
-testpath==0.4.4
-threadpoolctl==3.1.0
-torch==1.13.0
-tornado==6.1
-tqdm==4.66.2
-traitlets==5.0.5
-typing_extensions==4.4.0
-urllib3==2.2.0
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.5.1
+six==1.16.0
+stack-data==0.6.3
+threadpoolctl==3.3.0
+tornado==6.4
+traitlets==5.14.1
+typing_extensions==4.10.0
+tzdata==2024.1
+wcwidth==0.2.13
+zipp==3.17.0
