--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,23 @@
+anyio==4.3.0
+appdirs==1.4.4
 appnope==0.1.4
+asgiref==3.7.2
 asttokens==2.4.1
 attrs==23.2.0
 backcall==0.2.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
 comm==0.2.1
 debugpy==1.8.1
 decorator==5.1.1
 duckdb==0.10.0
+exceptiongroup==1.2.0
 executing==2.0.1
 fastjsonschema==2.19.1
+h11==0.14.0
+htmltools==0.5.1
+idna==3.6
 importlib_metadata==7.0.2
 importlib_resources==6.1.3
 ipykernel==6.29.3
@@ -18,7 +28,11 @@ jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 jupyter_client==8.6.0
 jupyter_core==5.7.1
+linkify-it-py==2.0.3
+markdown-it-py==3.0.0
 matplotlib-inline==0.1.6
+mdit-py-plugins==0.4.0
+mdurl==0.1.2
 nbclient==0.9.0
 nbformat==5.9.2
 nest-asyncio==1.6.0
@@ -31,26 +45,37 @@ pexpect==4.9.0
 pickleshare==0.7.5
 pkgutil_resolve_name==1.3.10
 platformdirs==4.2.0
-prompt-toolkit==3.0.43
+prompt-toolkit==3.0.36
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.17.2
 python-dateutil==2.9.0.post0
+python-multipart==0.0.9
 pytz==2024.1
 PyYAML==6.0.1
 pyzmq==25.1.2
 quarto==0.1.0
+questionary==2.0.1
 referencing==0.33.0
+requests==2.31.0
 rpds-py==0.18.0
 scikit-learn==1.3.2
 scipy==1.10.1
+shiny==0.8.1
 six==1.16.0
+sniffio==1.3.1
 stack-data==0.6.3
+starlette==0.37.2
 threadpoolctl==3.3.0
 tornado==6.4
 traitlets==5.14.1
 typing_extensions==4.10.0
 tzdata==2024.1
+uc-micro-py==1.0.3
+urllib3==2.2.1
+uvicorn==0.28.0
+watchfiles==0.21.0
 wcwidth==0.2.13
+websockets==12.0
 zipp==3.17.0
